Fix overlap, clear div nesting, change css rule names

--- a/src/Clues/Clues.css
+++ b/src/Clues/Clues.css
@@ -1,4 +1,4 @@
-.clues {
+.clues__container {
     display: flex;
     padding: 16px;
   }
